--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2715,7 +2715,7 @@ input, select, textarea {
 
 	.post {
 		padding: 3em 3em 1em 3em ;
-		background: #ffffff;
+		background: ;
 		border: solid 1px rgba(160, 160, 160, 0.3);
 		margin: 0 0 3em 0;
 		position: relative;
